--- a/apis.html
+++ b/apis.html
@@ -37,8 +37,12 @@
             <h1>States API</h1>
             MVC style Node.js REST API using Express, Mongoose, and MongoDB<br>
             Data also provided by JSON file<br>
-            <a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">Github</a><br>
-            <a href="https://conscious-platinum-napkin.glitch.me" target="_blank">URL</a><br>
+            <form action="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">
+                <button id="git"><h2>View on Github</h2></button>
+            </form>
+            <form action="https://conscious-platinum-napkin.glitch.me" target="_blank">
+                <button id="live"><h2>View Live Version</h2></button>
+            </form>
         </div>
             <table>
                 <tr>
@@ -95,8 +99,12 @@
             <div id="title">
                 <h1>Quotes API</h1>
                 PHP OOP REST API using PostgreSQL on Render.com<br>
-                <a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">Github</a><br>
-                <a href="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">URL</a><br>
+                <form action="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">
+                    <button id="git"><h2>View on Github</h2></button>
+                </form>
+                <form action="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">
+                    <button id="live"><h2>View Live Version</h2></button>
+                </form>
             </div>
             <table>
                 <tr>
@@ -169,8 +177,12 @@
             <div id="title">
                 <h1>Products API</h1>
                 Python Flask SQLite REST API<br>
-                <a href="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">Github</a><br>
-                <a href="https://silken-northern-buffet.glitch.me" target="_blank">URL</a><br>
+                <form action="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">
+                    <button id="git"><h2>View on Github</h2></button>
+                </form>
+                <form action="https://silken-northern-buffet.glitch.me" target="_blank">
+                    <button id="live"><h2>View Live Version</h2></button>
+                </form>
             </div>
             <table>
                 <tr>
