--- a/games.html
+++ b/games.html
@@ -33,31 +33,47 @@
             <a href="./resume.html">RESUME</a>
         </div>
         <div id="toppad"></div>
-        <div id="main">
+        <div id="title"><h1>Games</h1></div>
+        <div id="sections">
             <section>
+                <a href="https://dustinbriley.itch.io/space-ace-v3" target="_blank"><h2>Space Ace v3</h2></a>
+                <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="" height=""><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
+                <h2>A work in progress in GODOT</h2>
+            </section>
+            <section>
+                <a href="https://dustinbriley.itch.io/memory" target="_blank"><h2>Memory</h2></a>
+                <a href="https://dustinbriley.itch.io/memory" target="_blank"><img src="./games/Memory.PNG" alt="Memory"></a>
                 <div>
-                    <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="280" height="495"><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
-                    <p>currently a work in progress in GODOT</p>
+                    <form action="https://dustinbriley.itch.io/memory" target="_blank">
+                        <button id="dl"><h2>Download</h2></button>
+                    </form>
                 </div>
-                <div id="mem">
-                    <a href="https://dustinbriley.itch.io/memory"><h2>Memory</h2></a>
-                    <a href="https://dustinbriley.itch.io/memory"><img src="./games/Memory.PNG" alt="Memory"></a>
-                    <a href="https://dustinbriley.itch.io/memory"><h2>Download</h2></a>
+            </section>
+            <section>
+                <a href="https://dustinbriley.itch.io/space-ace-v2" target="_blank"><h2>Space Ace v2</h2></a>
+                <a href="https://dustinbriley.itch.io/space-ace-v2" target="_blank"><img src="./games/ssv2.gif" alt="Space Ace v2"></a>
+                <div>
+                <form action="https://dustinbriley.itch.io/space-ace-v2" target="_blank">
+                    <button id="dl"><h2>Download</h2></button>
+                </form>
                 </div>
-                <div id="sa2">
-                    <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Space Ace v2</h2></a>
-                    <a href="https://dustinbriley.itch.io/space-ace-v2"><img src="./games/ssv2.gif" alt="Space Ace v2"></a>
-                    <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Download</h2></a>
+            </section>
+            <section>
+                <a href="https://dustinbriley.itch.io/space-ace-v1" target="_blank"><h2>Space Ace v1</h2></a>
+                <a href="https://dustinbriley.itch.io/space-ace-v1" target="_blank"><img src="./games/ssv1.gif" alt="Space Ace v1"></a>
+                <div>
+                    <form action="https://dustinbriley.itch.io/space-ace-v1" target="_blank">
+                        <button id="dl"><h2>Download</h2></button>
+                    </form>
                 </div>
-                <div id="sa1">
-                    <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Space Ace v1</h2></a>
-                    <a href="https://dustinbriley.itch.io/space-ace-v1"><img src="./games/ssv1.gif" alt="Space Ace v1"></a>
-                    <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Download</h2></a>
-                </div>
-                <div id="av">
-                    <a href="https://dustinbriley.itch.io/avoidance"><h2>Avoidance</h2></a>
-                    <a href="https://dustinbriley.itch.io/avoidance"><img src="./games/avoid.gif" alt="Avoidance"></a>
-                    <a href="https://dustinbriley.itch.io/avoidance"><h2>Download</h2></a>
+            </section>
+            <section>
+                <a href="https://dustinbriley.itch.io/avoidance" target="_blank"><h2>Avoidance</h2></a>
+                <a href="https://dustinbriley.itch.io/avoidance" target="_blank"><img src="./games/avoid.gif" alt="Avoidance"></a>
+                <div>
+                    <form action="https://dustinbriley.itch.io/avoidance" target="_blank">
+                        <button id="dl"><h2>Download</h2></button>
+                    </form>
                 </div>
             </section>
         </div>
