--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <section>
                 <img src="./img/node.png" alt="">
                 <form action="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">
-                    <button id="git">View on Github</button>
+                    <button id="git"><h3>View on Github</h3></button>
                 </form>
                 <form action="https://conscious-platinum-napkin.glitch.me" target="_blank">
-                    <button id="live">View Live Version</button>
+                    <button id="live"><h3>View Live Version</h3></button>
                 </form>
                 <p>Node.js API</p>
                 <p>API for states data in JSON file and MongoDB</p>
@@ -60,7 +60,7 @@
             <section>
                 <img src="./games/Capture.PNG" alt="">
                 <form action="https://dustinbriley.itch.io/space-ace-v3" target="_blank">
-                    <button id="live">View Live Version</button>
+                    <button id="live"><h3>View Live Version</h3></button>
                 </form>
                 <p>Space Ace</p>
                 <p>Top-down space shooter I am making in GODOT</p>
@@ -68,10 +68,10 @@
             <section>
                 <img src="./img/phpapi.png" alt="">
                 <form action="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">
-                    <button id="git">View on Github</button>
+                    <button id="git"><h3>View on Github</h3></button>
                 </form>
                 <form action="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">
-                    <button id="live">View Live Version</button>
+                    <button id="live"><h3>View Live Version</h3></button>
                 </form>
                 <p>PHP API</p>
                 <p>An API for an online database of famous quotes</p>
@@ -79,10 +79,10 @@
             <section>
                 <img src="./games/Memory.PNG" alt="">
                 <form action="" target="_blank">
-                    <button id="git">View on Github</button>
+                    <button id="git"><h3>View on Github</h3></button>
                 </form>
                 <form action="" target="_blank">
-                    <button id="live">View Live Version</button>
+                    <button id="live"><h3>View Live Version</h3></button>
                 </form>
                 <p>Memory</p>
                 <p>Python memory game with bruteforce protection</p>
@@ -90,10 +90,10 @@
             <section>
                 <img src="./img/flask.png" alt="">
                 <form action="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">
-                    <button id="git">View on Github</button>
+                    <button id="git"><h3>View on Github</h3></button>
                 </form>
                 <form action="https://silken-northern-buffet.glitch.me" target="_blank">
-                    <button id="live">View Live Version</button>
+                    <button id="live"><h3>View Live Version</h3></button>
                 </form>
                 <p>Python Flask API</p>
                 <p>Simple API of products</p>
