--- a/apis.html
+++ b/apis.html
@@ -151,26 +151,22 @@
             <table>
                 <tr>
                     <th>ROUTE</th>
-                    <th>POST</th>
-                    <th>PUT</th>
+                    <th>POST/PUT</th>
                     <th>DELETE</th>
                 </tr>
                 <tr>
                     <td>api/quotes/</td>
-                    <td>created quote (id, quote, author_id, category_id)</td>
-                    <td>updated quote (id, quote, author_id, category_id)</td>
+                    <td>created/updated quote (id, quote, author_id, category_id)</td>
                     <td>id of deleted quote</td>
                 </tr>
                 <tr>
                     <td>api/authors/</td>
-                    <td>created author (id, author)</td>
-                    <td>updated author (id, author)</td>
+                    <td>created/updated author (id, author)</td>
                     <td>id of deleted author</td>
                 </tr>
                 <tr>
                     <td>api/categories/</td>
-                    <td>created category (id, category)</td>
-                    <td>updated category (id, category)</td>
+                    <td>created/updated category (id, category)</td>
                     <td>id of deleted category</td>
                 </tr>
             </table>
