--- a/apis.html
+++ b/apis.html
@@ -38,175 +38,177 @@
             MVC style Node.js REST API using Express, Mongoose, and MongoDB<br>
             Data also provided by JSON file<br>
             <form action="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">
-                <button id="git"><h2>View on Github</h2></button>
+                <button id="git">View on Github</button>
             </form>
             <form action="https://conscious-platinum-napkin.glitch.me" target="_blank">
-                <button id="live"><h2>View Live Version</h2></button>
+                <button id="live">View Live Version</button>
             </form>
         </div>
-            <table>
-                <tr>
-                    <th>ROUTE</th>
-                    <th>GET</th>
-                </tr>
-                <tr>
-                    <td>/states/</td>
-                    <td>All state data returned</td>
-                </tr>
-                <tr>
-                    <td>/states/?contig=true</td>
-                    <td>All state data for contiguous states (Not AK or HI)</td>
-                </tr>
-                <tr>
-                    <td>/states/?contig=false</td>
-                    <td>All state data for non-contiguous states (AK, HI)</td>
-                </tr>
-                <tr>
-                    <td>/states/:state</td>
-                    <td>All data for the state URL parameter</td>
-                </tr>
-                <tr>
-                    <td>/states/:state/funfact</td>
-                    <td>A random fun fact for the state URL parameter</td>
-                </tr>
-                <tr>
-                    <td>/states/:state/capital</td>
-                    <td>{ 'state': stateName, 'capital': capitalName }</td>
-                </tr>
-                <tr>
-                    <td>/states/:state/nickname</td>
-                    <td>{ 'state': stateName, 'nickname': nickname }</td>
-                </tr>
-                <tr>
-                    <td>/states/:state/population</td>
-                    <td>{ 'state': stateName, 'population': population }</td>
-                </tr>
-                <tr>
-                    <td>/states/:state/admission</td>
-                    <td>{ 'state': stateName, 'admitted': admissionDate }</td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <th>ROUTE</th>
-                    <th>POST/PATCH/DELETE</th>
-                </tr>
-                <tr>
-                    <td>/states/:state/funfact</td>
-                    <td>The result received from MongoDB</td>
-                </tr>
-            </table>
-            <div id="title">
-                <h1>Quotes API</h1>
-                PHP OOP REST API using PostgreSQL on Render.com<br>
-                <form action="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">
-                    <button id="git"><h2>View on Github</h2></button>
-                </form>
-                <form action="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">
-                    <button id="live"><h2>View Live Version</h2></button>
-                </form>
-            </div>
-            <table>
-                <tr>
-                    <th>ROUTE</th>
-                    <th>GET</th>
-                </tr>
-                <tr>
-                    <td>/api/quotes/</td>
-                    <td>All quotes are returned</td>
-                </tr>
-                <tr>
-                    <td>/api/quotes/?id=4</td>
-                    <td>The specific quote</td>
-                </tr>
-                <tr>
-                    <td>/api/quotes/?author_id=10</td>
-                    <td>All quotes from author_id=10</td>
-                </tr>
-                <tr>
-                    <td>/api/quotes/?category_id=8</td>
-                    <td>All quotes in category_id=8</td>
-                </tr>
-                <tr>
-                    <td>/api/quotes/?author_id=3&category_id=4</td>
-                    <td>All quotes from authorId=3 that are in category_id=4</td>
-                </tr>
-                <tr>
-                    <td>/api/authors/</td>
-                    <td>All authors with their id</td>
-                </tr>
-                <tr>
-                    <td>/api/authors/?id=5</td>
-                    <td>The specific author with their id</td>
-                </tr>
-                <tr>
-                    <td>/api/categories/</td>
-                    <td>All categories with their ids (id, category)</td>
-                </tr>
-                <tr>
-                    <td>/api/categories/?id=7</td>
-                    <td>The specific category with its id</td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <th>ROUTE</th>
-                    <th>POST/PUT</th>
-                    <th>DELETE</th>
-                </tr>
-                <tr>
-                    <td>api/quotes/</td>
-                    <td>created/updated quote (id, quote, author_id, category_id)</td>
-                    <td>id of deleted quote</td>
-                </tr>
-                <tr>
-                    <td>api/authors/</td>
-                    <td>created/updated author (id, author)</td>
-                    <td>id of deleted author</td>
-                </tr>
-                <tr>
-                    <td>api/categories/</td>
-                    <td>created/updated category (id, category)</td>
-                    <td>id of deleted category</td>
-                </tr>
-            </table>
-            <div id="title">
-                <h1>Products API</h1>
-                Python Flask SQLite REST API<br>
-                <form action="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">
-                    <button id="git"><h2>View on Github</h2></button>
-                </form>
-                <form action="https://silken-northern-buffet.glitch.me" target="_blank">
-                    <button id="live"><h2>View Live Version</h2></button>
-                </form>
-            </div>
-            <table>
-                <tr>
-                    <th>ROUTE</th>
-                    <th>GET</th>
-                    <th>POST</th>
-                </tr>
-                <tr>
-                    <td>/product</td>
-                    <td>gets all products</td>
-                    <td>creates new product (name, description, price, quantity JSON object required)</td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <th>ROUTE</th>
-                    <th>GET</th>
-                    <th>PUT</th>
-                    <th>DELETE</th>
-                </tr>
-                <tr>
-                    <td>/product/:id</td>
-                    <td>gets product by ID</td>
-                    <td>updates existing product (name, description, price, quantity JSON object required)</td>
-                    <td>deletes product by id</td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <th>ROUTE</th>
+                <th>GET</th>
+            </tr>
+            <tr>
+                <td>/states/</td>
+                <td>All state data returned</td>
+            </tr>
+            <tr>
+                <td>/states/?contig=true</td>
+                <td>All state data for contiguous states (Not AK or HI)</td>
+            </tr>
+            <tr>
+                <td>/states/?contig=false</td>
+                <td>All state data for non-contiguous states (AK, HI)</td>
+            </tr>
+            <tr>
+                <td>/states/:state</td>
+                <td>All data for the state URL parameter</td>
+            </tr>
+            <tr>
+                <td>/states/:state/funfact</td>
+                <td>A random fun fact for the state URL parameter</td>
+            </tr>
+            <tr>
+                <td>/states/:state/capital</td>
+                <td>{ 'state': stateName, 'capital': capitalName }</td>
+            </tr>
+            <tr>
+                <td>/states/:state/nickname</td>
+                <td>{ 'state': stateName, 'nickname': nickname }</td>
+            </tr>
+            <tr>
+                <td>/states/:state/population</td>
+                <td>{ 'state': stateName, 'population': population }</td>
+            </tr>
+            <tr>
+                <td>/states/:state/admission</td>
+                <td>{ 'state': stateName, 'admitted': admissionDate }</td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <th>ROUTE</th>
+                <th>POST/PATCH/DELETE</th>
+            </tr>
+            <tr>
+                <td>/states/:state/funfact</td>
+                <td>The result received from MongoDB</td>
+            </tr>
+        </table>
+        <div id="pad"></div>
+        <div id="title">
+            <h1>Quotes API</h1>
+            PHP OOP REST API using PostgreSQL on Render.com<br>
+            <form action="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">
+                <button id="git">View on Github</button>
+            </form>
+            <form action="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">
+                <button id="live">View Live Version</button>
+            </form>
         </div>
+        <table>
+            <tr>
+                <th>ROUTE</th>
+                <th>GET</th>
+            </tr>
+            <tr>
+                <td>/api/quotes/</td>
+                <td>All quotes are returned</td>
+            </tr>
+            <tr>
+                <td>/api/quotes/?id=4</td>
+                <td>The specific quote</td>
+            </tr>
+            <tr>
+                <td>/api/quotes/?author_id=10</td>
+                <td>All quotes from author_id=10</td>
+            </tr>
+            <tr>
+                <td>/api/quotes/?category_id=8</td>
+                <td>All quotes in category_id=8</td>
+            </tr>
+            <tr>
+                <td>/api/quotes/?author_id=3&category_id=4</td>
+                <td>All quotes from authorId=3 that are in category_id=4</td>
+            </tr>
+            <tr>
+                <td>/api/authors/</td>
+                <td>All authors with their id</td>
+            </tr>
+            <tr>
+                <td>/api/authors/?id=5</td>
+                <td>The specific author with their id</td>
+            </tr>
+            <tr>
+                <td>/api/categories/</td>
+                <td>All categories with their ids (id, category)</td>
+            </tr>
+            <tr>
+                <td>/api/categories/?id=7</td>
+                <td>The specific category with its id</td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <th>ROUTE</th>
+                <th>POST/PUT</th>
+                <th>DELETE</th>
+            </tr>
+            <tr>
+                <td>api/quotes/</td>
+                <td>created/updated quote (id, quote, author_id, category_id)</td>
+                <td>id of deleted quote</td>
+            </tr>
+            <tr>
+                <td>api/authors/</td>
+                <td>created/updated author (id, author)</td>
+                <td>id of deleted author</td>
+            </tr>
+            <tr>
+                <td>api/categories/</td>
+                <td>created/updated category (id, category)</td>
+                <td>id of deleted category</td>
+            </tr>
+        </table>
+        <div id="pad"></div>
+        <div id="title">
+            <h1>Products API</h1>
+            Python Flask SQLite REST API<br>
+            <form action="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">
+                <button id="git">View on Github</button>
+            </form>
+            <form action="https://silken-northern-buffet.glitch.me" target="_blank">
+                <button id="live">View Live Version</button>
+            </form>
+        </div>
+        <table>
+            <tr>
+                <th>ROUTE</th>
+                <th>GET</th>
+                <th>POST</th>
+            </tr>
+            <tr>
+                <td>/product</td>
+                <td>gets all products</td>
+                <td>creates new product (name, description, price, quantity JSON object required)</td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <th>ROUTE</th>
+                <th>GET</th>
+                <th>PUT</th>
+                <th>DELETE</th>
+            </tr>
+            <tr>
+                <td>/product/:id</td>
+                <td>gets product by ID</td>
+                <td>updates existing product (name, description, price, quantity JSON object required)</td>
+                <td>deletes product by id</td>
+            </tr>
+        </table>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
