--- a/assembly.html
+++ b/assembly.html
@@ -73,6 +73,7 @@
                 <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
             </tr>
         </table>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
