--- a/htmlcss.html
+++ b/htmlcss.html
@@ -36,58 +36,58 @@
         <div id="title">
             <h1>HTML CSS</h1>
         </div>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Preview</th>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch2pacific/" target="_blank">Pacific v1</a></td>
-                    <td>Homepage just HTML</td>
-                    <td><a href="./img/code/html/1.PNG"><img src="./img/code/html/1.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch4pacific/" target="_blank">Pacific v2</a></td>
-                    <td>Added CSS background colors</td>
-                    <td><a href="./img/code/html/2.PNG"><img src="./img/code/html/2.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch5pacific/" target="_blank">Pacific v3</a></td>
-                    <td>Added image, list, and colored text</td>
-                    <td><a href="./img/code/html/3.PNG"><img src="./img/code/html/3.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch7pacific/" target="_blank">Pacific v4</a></td>
-                    <td>Added background gradients, navigation, shadows</td>
-                    <td><a href="./img/code/html/4.PNG"><img src="./img/code/html/4.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch8pacific/" target="_blank">Pacific v5</a></td>
-                    <td>Added responsive @media views</td>
-                    <td><a href="./img/code/html/5.PNG"><img src="./img/code/html/5.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch9pacific/" target="_blank">Pacific v6</a></td>
-                    <td>More responsiveness</td>
-                    <td><a href="./img/code/html/6.PNG"><img src="./img/code/html/6.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch10pacific/" target="_blank">Pacific v7</a></td>
-                    <td>Added hover effects, and spacing</td>
-                    <td><a href="./img/code/html/7.PNG"><img src="./img/code/html/7.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch11pacific/" target="_blank">Pacific v8</a></td>
-                    <td>Added tables</td>
-                    <td><a href="./img/code/html/8.PNG"><img src="./img/code/html/8.PNG" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="./index.html" target="_blank">Portfolio</a></td>
-                    <td>Hey look! You're here already.</td>
-                    <td><a href="./img/code/html/p.PNG"><img src="./img/code/html/p.PNG" alt="Preview"></a></td>
-            </table>
-        </div>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Preview</th>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch2pacific/" target="_blank">Pacific v1</a></td>
+                <td>Homepage just HTML</td>
+                <td><a href="./img/code/html/1.PNG"><img src="./img/code/html/1.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch4pacific/" target="_blank">Pacific v2</a></td>
+                <td>Added CSS background colors</td>
+                <td><a href="./img/code/html/2.PNG"><img src="./img/code/html/2.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch5pacific/" target="_blank">Pacific v3</a></td>
+                <td>Added image, list, and colored text</td>
+                <td><a href="./img/code/html/3.PNG"><img src="./img/code/html/3.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch7pacific/" target="_blank">Pacific v4</a></td>
+                <td>Added background gradients, navigation, shadows</td>
+                <td><a href="./img/code/html/4.PNG"><img src="./img/code/html/4.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch8pacific/" target="_blank">Pacific v5</a></td>
+                <td>Added responsive @media views</td>
+                <td><a href="./img/code/html/5.PNG"><img src="./img/code/html/5.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch9pacific/" target="_blank">Pacific v6</a></td>
+                <td>More responsiveness</td>
+                <td><a href="./img/code/html/6.PNG"><img src="./img/code/html/6.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch10pacific/" target="_blank">Pacific v7</a></td>
+                <td>Added hover effects, and spacing</td>
+                <td><a href="./img/code/html/7.PNG"><img src="./img/code/html/7.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://dbriley.infprojects.fhsu.edu/ch11pacific/" target="_blank">Pacific v8</a></td>
+                <td>Added tables</td>
+                <td><a href="./img/code/html/8.PNG"><img src="./img/code/html/8.PNG" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="./index.html" target="_blank">Portfolio</a></td>
+                <td>Hey look! You're here already.</td>
+                <td><a href="./img/code/html/p.PNG"><img src="./img/code/html/p.PNG" alt="Preview"></a></td>
+        </table>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
