--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,7 @@
                 <a href="./assembly.html"><img src="./img/asm.png" alt="Assembly"></a>
             </section>
         </div>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
