--- a/python.html
+++ b/python.html
@@ -36,44 +36,44 @@
         <div id="title">
             <h1>Python Programs</h1>
         </div>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Preview</th>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Python-1" target="_blank">Woodchuck</a></td>
-                    <td>Type Casting</td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Python-2" target="_blank">Login</a></td>
-                    <td>Conditionals, Loops, and Lists</td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Python-3" target="_blank">Cars</a></td>
-                    <td>Lists and Dictionaries</td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Python-4" target="_blank">Story</a></td>
-                    <td>Reading, Writing, and Editing files</td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Unicode-Memory" target="_blank">Memory</a></td>
-                    <td>Unicode Memory Game (with bruteforce protection)</td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Tkinter-Memory" target="_blank">Memory</a></td>
-                    <td>Tkinter Memory Game (with bruteforce protection)</td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-            </table>
-        </div>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Preview</th>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Python-1" target="_blank">Woodchuck</a></td>
+                <td>Type Casting</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Python-2" target="_blank">Login</a></td>
+                <td>Conditionals, Loops, and Lists</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Python-3" target="_blank">Cars</a></td>
+                <td>Lists and Dictionaries</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Python-4" target="_blank">Story</a></td>
+                <td>Reading, Writing, and Editing files</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Unicode-Memory" target="_blank">Memory</a></td>
+                <td>Unicode Memory Game (with bruteforce protection)</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Tkinter-Memory" target="_blank">Memory</a></td>
+                <td>Tkinter Memory Game (with bruteforce protection)</td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+        </table>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
