--- a/datastructures.html
+++ b/datastructures.html
@@ -36,44 +36,44 @@
         <div id="title">
             <h1>Data Structures</h1>
         </div>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Preview</th>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank">Sorts</a></td>
-                    <td>Insert, Select, Quick, and Merge Sort Algorithms</td>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank"><img src="./img/code/ds/sorts.PNG" alt="Sorts"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank">Searches</a></td>
-                    <td>Linear and Binary Search Algorithms</td>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank"><img src="./img/code/ds/" alt="Searches"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank">Stacks and Queues</a></td>
-                    <td>Uses Stack and Queue Algorithms to check if a sentence is a palindrome</td>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank"><img src="./img/code/ds/sq.PNG" alt="Stacks and Queues"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank">Hash Table</a></td>
-                    <td>Hash Table Algorithm</td>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank"><img src="./img/code/ds/ht.PNG" alt="Hash Table"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank">Binary Search Tree</a></td>
-                    <td>Binary Search Tree Algorithm</td>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank"><img src="./img/code/ds/bst.PNG" alt="Binary Search Tree"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank">Graph</a></td>
-                    <td>Graph Algorithm</td>
-                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank"><img src="./img/code/ds/graph.PNG" alt="Graph"></a></td>
-                </tr>
-            </table>
-        </div>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Preview</th>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank">Sorts</a></td>
+                <td>Insert, Select, Quick, and Merge Sort Algorithms</td>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank"><img src="./img/code/ds/sorts.PNG" alt="Sorts"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank">Searches</a></td>
+                <td>Linear and Binary Search Algorithms</td>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank"><img src="./img/code/ds/" alt="Searches"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank">Stacks and Queues</a></td>
+                <td>Uses Stack and Queue Algorithms to check if a sentence is a palindrome</td>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank"><img src="./img/code/ds/sq.PNG" alt="Stacks and Queues"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank">Hash Table</a></td>
+                <td>Hash Table Algorithm</td>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank"><img src="./img/code/ds/ht.PNG" alt="Hash Table"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank">Binary Search Tree</a></td>
+                <td>Binary Search Tree Algorithm</td>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank"><img src="./img/code/ds/bst.PNG" alt="Binary Search Tree"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank">Graph</a></td>
+                <td>Graph Algorithm</td>
+                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank"><img src="./img/code/ds/graph.PNG" alt="Graph"></a></td>
+            </tr>
+        </table>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
