--- a/php.html
+++ b/php.html
@@ -36,39 +36,39 @@
         <div id="title">
             <h1>PHP Programs</h1>
         </div>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Preview</th>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/PHP-1" target="_blank">Data Types</a></td>
-                    <td></td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/PHP-2" target="_blank">Conditionals, Loops, Arrays, Functions</a></td>
-                    <td></td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/PHP-3" target="_blank">Classes and Objects</a></td>
-                    <td></td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/PHP-4" target="_blank">PHP Classes, Objects, and JSON</a></td>
-                    <td></td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">PHP OOP REST API using PostgreSQL</a></td>
-                    <td></td>
-                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-                </tr>
-            </table>
-        </div>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Preview</th>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/PHP-1" target="_blank">Data Types</a></td>
+                <td></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/PHP-2" target="_blank">Conditionals, Loops, Arrays, Functions</a></td>
+                <td></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/PHP-3" target="_blank">Classes and Objects</a></td>
+                <td></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/PHP-4" target="_blank">PHP Classes, Objects, and JSON</a></td>
+                <td></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">PHP OOP REST API using PostgreSQL</a></td>
+                <td></td>
+                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+            </tr>
+        </table>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
