--- a/sql.html
+++ b/sql.html
@@ -36,34 +36,34 @@
         <div id="title">
             <h1>SQL</h1>
         </div>
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Preview</th>
-                </tr>
-                <tr>
-                    <td><a href="" target="_blank"></a></td>
-                    <td></td>
-                    <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="" target="_blank"></a></td>
-                    <td></td>
-                    <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="" target="_blank"></a></td>
-                    <td></td>
-                    <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
-                </tr>
-                <tr>
-                    <td><a href="" target="_blank"></a></td>
-                    <td></td>
-                    <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
-                </tr>
-            </table>
-        </div>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Preview</th>
+            </tr>
+            <tr>
+                <td><a href="" target="_blank"></a></td>
+                <td></td>
+                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="" target="_blank"></a></td>
+                <td></td>
+                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="" target="_blank"></a></td>
+                <td></td>
+                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+            </tr>
+            <tr>
+                <td><a href="" target="_blank"></a></td>
+                <td></td>
+                <td><a href="" target="_blank"><img src="" alt="Preview"></a></td>
+            </tr>
+        </table>
+        <div id="pad"></div>
     </div>
 </body>
 </html>
